--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Maheshwari exports-imports</title>
      <link rel="stylesheet" type="text/css" href="Index.css">
      <link rel="stylesheet" type="text/css" href="bootstrap.css">
+     //trying something
 
 
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -37,7 +38,7 @@
           <a class="dropdown-item" href="#">Expert Opinions</a>
           <a class="dropdown-item" href="#">Sponsors</a>
           <div class="dropdown-divider">
-          <a class="dropdown-item" href="#">Meet-ups</a></div>
+          <a class="dropdown-item" href="#">Meet-up</a></div>
         </div>
       </li>
       <li class="nav-item">
@@ -63,7 +64,7 @@
   <p><a class="btn btn-danger btn-lg" href="http://www.google.com" role="button" >Learn more</a></p>
 </div>
 <h1><bolder>Our Connections With World</bolder></h1>
-<div class="row"  >
+<div class="row text-center" style="display:flex,!important; flex-wrap: wrap,!important;"  >
     <div class="col-lg-4 col-sm-6">
         <img src="1.jpg" class="img-thumbnail" alt="usa"><strong>America</strong>
 
